--- a/project/h750.uvprojx
+++ b/project/h750.uvprojx
@@ -424,6 +424,11 @@
               <FileType>1</FileType>
               <FilePath>..\drv\src\drv_usart.c</FilePath>
             </File>
+            <File>
+              <FileName>drv_key.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\drv\src\drv_key.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
