--- a/project/h750.uvprojx
+++ b/project/h750.uvprojx
@@ -16,8 +16,8 @@
         <TargetCommonOption>
           <Device>STM32H750VBTx</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32H7xx_DFP.3.1.1</PackID>
-          <PackURL>https://www.keil.com/pack/</PackURL>
+          <PackID>Keil.STM32H7xx_DFP.2.7.0</PackID>
+          <PackURL>http://www.keil.com/pack/</PackURL>
           <Cpu>IRAM(0x20000000,0x00020000) IRAM2(0x24000000,0x00080000) IROM(0x08000000,0x00020000) XRAM(0x30000000,0x00048000) XRAM2(0x38000000,0x00010000) CPUTYPE("Cortex-M7") FPU3(DFPU) CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
@@ -473,6 +473,21 @@
               <FileType>1</FileType>
               <FilePath>..\drv\src\drv_touch.c</FilePath>
             </File>
+            <File>
+              <FileName>drv_qspi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\drv\src\drv_qspi.c</FilePath>
+            </File>
+            <File>
+              <FileName>drv_noflash.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\drv\src\drv_noflash.c</FilePath>
+            </File>
+            <File>
+              <FileName>drv_norflash_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\drv\src\drv_norflash_ex.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -610,6 +625,16 @@
               <FileName>stm32h7xx_hal_tim_ex.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\lib\STM32H7xx_HAL_Driver\Src\stm32h7xx_hal_tim_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7xx_hal_dma_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\lib\STM32H7xx_HAL_Driver\Src\stm32h7xx_hal_dma_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7xx_hal_qspi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\lib\STM32H7xx_HAL_Driver\Src\stm32h7xx_hal_qspi.c</FilePath>
             </File>
           </Files>
         </Group>
