<feat>:添加了julia驱动，主功能未完成，修改了LCD驱动横屏显示花屏的BUG，需要修改驱动函数中的扫描方向，以及去掉LCD显示ID的判定

--- a/project/h750.uvprojx
+++ b/project/h750.uvprojx
@@ -403,6 +403,11 @@
               <FileType>5</FileType>
               <FilePath>..\apps\inc\stm32h7xx_hal_conf.h</FilePath>
             </File>
+            <File>
+              <FileName>drv_btim3_1.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\drv\src\drv_btim3_1.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -442,6 +447,16 @@
               <FileName>drv_lcd.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\drv\src\drv_lcd.c</FilePath>
+            </File>
+            <File>
+              <FileName>drv_julia.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\drv\src\drv_julia.c</FilePath>
+            </File>
+            <File>
+              <FileName>drv_btim3_1.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\drv\src\drv_btim3_1.c</FilePath>
             </File>
           </Files>
         </Group>
