--- a/project/h750.uvprojx
+++ b/project/h750.uvprojx
@@ -473,6 +473,11 @@
               <FileType>1</FileType>
               <FilePath>..\drv\src\drv_touch.c</FilePath>
             </File>
+            <File>
+              <FileName>drv_stm32flash.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\drv\src\drv_stm32flash.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -610,6 +615,16 @@
               <FileName>stm32h7xx_hal_tim_ex.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\lib\STM32H7xx_HAL_Driver\Src\stm32h7xx_hal_tim_ex.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7xx_hal_flash.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\lib\STM32H7xx_HAL_Driver\Src\stm32h7xx_hal_flash.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32h7xx_hal_flash_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\lib\STM32H7xx_HAL_Driver\Src\stm32h7xx_hal_flash_ex.c</FilePath>
             </File>
           </Files>
         </Group>
