<feat>:可以通过串口控制DAC的数值

--- a/project/h750.uvprojx
+++ b/project/h750.uvprojx
@@ -428,6 +428,11 @@
               <FileType>1</FileType>
               <FilePath>..\drv\src\drv_usart.c</FilePath>
             </File>
+            <File>
+              <FileName>drv_dac.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\drv\src\drv_dac.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
